tests/rascal/negative/parse_errors/L1/reserved3.ob
MODULE TYPE;

BEGIN
  x := 1;
END TYPE.
